--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -16,6 +16,12 @@
 
 }
 
+main {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 @media (max-width: 1080px) {
     html {
         font-size: 93.75%;
@@ -38,7 +44,7 @@ body {
     background-size: 100% 100%;
 }
 
-body, input, textarea, select, button {
+body, input, textarea, select, button, td, p {
     font: 400 1rem "Roboto", sans-serif;
 }
 
