--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -13,6 +13,7 @@
     --gray-800: #29292e;
     --gray-850: #1f2729;
     --gray-900: #121214;
+    --red: #FC4031;
 
 }
 
@@ -42,6 +43,8 @@ body {
     background: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('/assets/back.png');
     background: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url('/assets/back.png');
     background-size: 100% 100%;
+    background-repeat: no-repeat;
+    background-attachment: fixed;
 }
 
 body, input, textarea, select, button, td, p {
